--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,5 @@ PyJWT==2.10.1
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
-echo "flask-mailing" >> requirements.txt
+flask-mailing==1.0.5
 python-jose[cryptography]==3.5.0  # or latest version
